# swift-toolbox

./: .gitattributes  .gitignore  .linelint.yml  0001-PySide2-Handle-not-finding-a-slot-by-name.patch  Cargo.toml  LICENSE  Makefile.toml  README.debug.md  README.md  build-dist.ps1  build-dist.sh  command.txt  compress-dist.ps1  conda.yml  console-capnp-20220419-033358.pickle  debug_intermittent_startup_crash.sh  get-pip.py  get_list.py  prep-builder-py.ps1  prep-dist-py.ps1  prep-dist-py.sh  purge.ps1  pycapnp.tgz  pylintrc  pyproject.toml  pyside2-includepy.patch  requirements-dev.txt  requirements.txt  rust-toolchain.toml  shell.nix  shiboken2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl  shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl  ssl.py  swift-toolbox.pyproject
.cargo/: config
.github/: ci-build.sh  dependabot.yml  disk_usage_benchmarks.py  release.yml
console/: console.py  console_resources.py  linux.sh  mac.sh
console_backend/: .gitignore  Cargo.toml  MANIFEST.in  build.rs  console_backend.capnp  pyproject.toml  setup.py
console_backend/benches/: benches.rs  benchmarks.py  cpu_benches.rs  tests.rs
console_backend/benches/data/: piksi-relay.sbp
console_backend/benches/data/2020-06-25-BayLoop/STEP_v2_SR_L2_OSR_staging_10Hz_GNSSOnly_AmotechL2/: 25-190704.sbp
console_backend/benches/data/2020-09-04-BayLoop/M8L_BDS_ADR431_nativeODO_Swiftlets_OSR_prod_10Hz_AmotechL2/: 04-155800_one_second.sbp
console_backend/console_backend/: .gitignore  __init__.py
console_backend/src/: advanced_imu_tab.rs  advanced_ins_tab.rs  advanced_magnetometer_tab.rs  advanced_networking_tab.rs  advanced_spectrum_analyzer_tab.rs  advanced_system_monitor_tab.rs  baseline_tab.rs  bottom_nav_bar.rs  broadcaster.rs  cli_options.rs  client_sender.rs  common_constants.rs  connection.rs  constants.rs  date_conv.rs  errors.rs  fft_monitor.rs  fileio.rs  firmware_update.rs  flags.rs  formatters.rs  fusion_engine_status.rs  fusion_engine_status_bar.rs  fusion_status_flags.rs  icbins_msg_utils.rs  ipc.rs  lib.rs  log_panel.rs  main_tab.rs  ntrip_output.rs  ntrip_tab.rs  ntripping.rs  observation_tab.rs  output.rs  piksi_tools_constants.rs  process_messages.rs  rtcm_converter.rs  rtcm_monitor.rs  server.rs  server_recv_thread.rs  (+18 more)
console_backend/src/tabs/: advanced_magnetometer_tab.rs  advanced_spectrum_analyzer_tab.rs  advanced_system_monitor_tab.rs  advanced_tab.rs  baseline_tab.rs  corrections_tab.rs  main_tab.rs  mod.rs  observation_tab.rs  settings_tab.rs  solution_tab.rs  tracking_signals_tab.rs  tracking_tab.rs  update_tab.rs
console_backend/src/tabs/advanced_tab/: advanced_imu_tab.rs  advanced_magnetometer_tab.rs  advanced_networking_tab.rs  advanced_spectrum_analyzer_tab.rs  advanced_system_monitor_tab.rs  mod.rs  ntrip_tab.rs
console_backend/src/tabs/solution_tab/: mod.rs  solution_position_tab.rs  solution_velocity_tab.rs
console_backend/src/tabs/tracking_tab/: tracking_signals_tab.rs  tracking_sky_plot_tab.rs
console_backend/src/updater/: firmware_update.rs  swift_version.rs  update_downloader.rs
console_backend/src/utils/: date_conv.rs  mod.rs
console_backend/tests/: log.rs  mem_benches.rs
console_backend/tests/data/: 202010224_192043.sbp  console-capnp-20220419-033358.pickle  ins_updates.sbp  piksi-relay-1min.sbp  piksi-relay-5sec.sbp
docs/: DESIGN.md  README.md
entrypoint/: Cargo.toml  build.rs
entrypoint/src/: lib.rs  main.rs  splash.rs  windowpos.rs
jsonschema/: Message.json
pyside-wheels/: PySide2-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl  PySide2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_universal2.whl  PySide2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_x86_64.whl  PySide2-5.15.2.1-5.15.2-cp39-cp39-win_amd64.whl  PySide2-5.15.2.2-5.15.2-cp35.cp36.cp37.cp38.cp39.cp310-abi3-macosx_10_13_intel.whl  PySide2-5.15.2.2-5.15.2-cp35.cp36.cp37.cp38.cp39.cp310-abi3-manylinux1_x86_64.whl  PySide2-5.15.2.2-5.15.2-cp35.cp36.cp37.cp38.cp39.cp310-none-win_amd64.whl  shiboken2-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl  shiboken2-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_x86_64.whl  shiboken2-5.15.2.1-5.15.2-cp39-cp39-win_amd64.whl  shiboken2-5.15.2.2-5.15.2-cp35.cp36.cp37.cp38.cp39.cp310-abi3-macosx_10_13_intel.whl  shiboken2-5.15.2.2-5.15.2-cp35.cp36.cp37.cp38.cp39.cp310-abi3-manylinux1_x86_64.whl  shiboken2-5.15.2.2-5.15.2-cp35.cp36.cp37.cp38.cp39.cp310-none-win_amd64.whl  shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-linux_x86_64.whl  shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-macosx_10_13_x86_64.whl  shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-win_amd64.whl
resources/: AdvancedTab.qml  BaselineTab.qml  BottomNavBar.qml  ChartLegend.qml  ConnectionScreen.qml  Constants.qml  ContactModel.qml  CorrectionsTab.qml  LogPanel.qml  LoggingBar.qml  LogoPopup.qml  MainDialogView.qml  MainDrawer.qml  MainTab.qml  MainTabs.qml  NavBar.qml  ObservationTab.qml  PlayPauseButton.qml  PositionLoopAnimation.qml  SettingsTab.qml  SideNavBar.qml  SolutionTab.qml  StatusBar.qml  Tab.qml  TabInfoBar.qml  TrackingTab.qml  UpdateNotifications.qml  UpdateTab.qml  console_resources.qrc  qtquickcontrols2.conf  view.qml
scripts/: build-dist.ps1  build-dist.sh  compress-dist.ps1  compress-dist.sh  get-pip.py  prep-dist.ps1  prep-dist.sh  purge-dist.ps1  purge-dist.sh  purge.ps1  purge.sh  setup-builder.ps1  setup-builder.sh
standalone-py/: .gitignore  download.ps1  download.sh
swiftnav_console/: __init__.py  advanced_imu_tab.py  advanced_ins_tab.py  advanced_magnetometer_tab.py  advanced_networking_tab.py  advanced_spectrum_analyzer_tab.py  advanced_system_monitor_tab.py  backend_importer.py  backend_request_broker.py  baseline_plot.py  baseline_table.py  connection.py  console_resources.py  constants.py  corrections_tab.py  data_model.py  file_io.py  fusion_status_flags.py  log_panel.py  logging_bar.py  main.py  nav_bar.py  ntrip_status.py  observation_tab.py  scalene_main.py  settings_tab.py  solution_map.py  solution_position_tab.py  solution_position_tab2.py  solution_table.py  (+6 more)
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
(+184 files in other folders)
