[project]
name = "swiftnav_console"
authors = [{ name = "Swift Navigation", email = "dev@swiftnav.com" }]
readme = "README.md"
classifiers = []
requires-python = ">=3.8"
dynamic = ['version', 'description']
dependencies = ["pycapnp ~= 1.1.0"]

[project.optional-dependencies]
test = [
  "black ~= 22.3",
  "jedi ~= 0.18.0",
  "mypy ~= 0.910",
  "pylint ~= 2.9.3",
  "pytest ~= 6.2.4",
  "setuptools-rust ~= 0.12.1",
  "psutil ~= 5.8.0",
  "qt5-applications ~= 5.15.2",
  "py2many >=0.3",
  "types-requests ~= 2.25.0",
]

[build-system]
requires = [
  "flit_core >=2,<4",
  "setuptools>=41.0.0",
  "wheel",
  "setuptools_rust>=0.12.1",
]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["swiftnav_console/console_resources.py"]

[tool.black]
line-length = 120
