[project]
name = "swiftnav_console"
authors = [{ name = "Swift Navigation", email = "dev@swiftnav.com" }]
readme = "README.md"
classifiers = []
requires-python = ">=3.8"
dynamic = ['version', 'description']
dependencies = ["pycapnp == 1.3.0"]

[project.optional-dependencies]
test = [
  "black ~= 23.1",
  "jedi ~= 0.19.0",
  "mypy ~= 1.1",
  "pylint ~= 3.0.1",
  "pytest ~= 7.4.0",
  "setuptools-rust ~= 1.8.1",
  "psutil ~= 5.9.3",
  "py2many >=0.3",
  "types-requests ~= 2.31.0",
]
ssh-tunnel = ["sshtunnel >= 0.4.0"]

[build-system]
requires = [
  "flit_core >=2,<4",
  "setuptools>=41.0.0",
  "wheel",
  "setuptools_rust>=0.12.1",
]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["swiftnav_console/console_resources.py"]

[tool.black]
line-length = 120

[tool.pylint.MASTER]
jobs = 0
extension-pkg-whitelist = "PySide6"

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-function-docstring",
  "invalid-name",
  "missing-module-docstring",
  "missing-class-docstring",
  "too-many-locals",
  "too-many-statements",
  "too-many-arguments",
  "too-many-branches",
  "too-many-function-args",
  "ungrouped-imports",
  "duplicate-code",
]

[tool.pylint.FORMAT]
max-line-length = 120
