[package]
authors = ["Swift Navigation <dev@swift-nav.com>"]
name = "console-backend"
version = "0.1.0"
description = "A Python wrapper for the Rust console backend"
edition = "2018"

[dependencies]
log = "0.4.17"
async_logger_log = "0.2.0"
async_logger = "0.3.3"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4.0"
capnp = "0.14"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
paste = "1"
pyo3 = { version = "0.17", features = [
  "extension-module",
  "macros",
], default-features = false, optional = true }
serde = { version = "1.0.145", features = ["derive"] }
tempfile = "3.3.0"
ordered-float = "3.1"
ndarray = "0.15.6"
glob = "0.3.0"
criterion = "0.4.0"
sysinfo = "0.26.4"
serialport = { git = "https://github.com/swift-nav/serialport-rs.git", default-features = false }
directories = "4"
anyhow = { version = "1", features = ["backtrace"] }
serde_yaml = "0.9.13"
clap = { version = "4.0.5", features = ["derive"] }
indexmap = { version = "1.9.1", features = ["serde"] }
serde_json = { version = "1" }
crossbeam = "0.8"
rand = "0.8.5"
serde-pickle = { version = "1.1.1", optional = true }
parking_lot = "0.12.1"
regex = { version = "1.6.0" }
rust-ini = "0.18.0"
sbp = { version = "4.8.0", features = ["json", "link", "swiftnav"] }
sbp-settings = "0.6.13"
env_logger = { version = "0.9", optional = true }
mimalloc = { version = "0.1", default-features = false }
indicatif = { version = "0.17", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
serialport = { git = "https://github.com/swift-nav/serialport-rs.git" }
curl = { version = "0.4", features = ["ssl", "static-curl"] }

[target.'cfg(target_os = "linux")'.dependencies]
curl = { version = "0.4", features = ["rustls", "static-curl"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.24", features = [
  "Win32_System_Console",
  "Win32_Foundation",
] }

[dev-dependencies]
logtest = "2.0.0"
serial_test = "0.8.0"

[build-dependencies]
capnpc = "0.14"

[lib]
name = "console_backend"
crate-type = ["cdylib", "lib"]
bench = false

[[bench]]
name = "cpu_benches"
harness = false

[[bin]]
name = "swift-settings"
path = "src/bin/settings.rs"
bench = false
required-features = ["env_logger"]

[[bin]]
name = "swift-files"
path = "src/bin/files.rs"
bench = false
required-features = ["env_logger", "indicatif"]

[[bin]]
name = "fft_monitor"
path = "src/bin/fft_monitor.rs"
bench = false
required-features = ["fft"]

[[bin]]
name = "headless-console"
path = "src/bin/headless-console.rs"
bench = false

[[bin]]
name = "swift-updater"
path = "src/bin/update_tool.rs"
bench = false

[features]
default = ["pyo3"]
benches = []
tests = []
fft = ["serde-pickle"]
