[package]
authors = ["Swift Navigation <dev@swift-nav.com>"]
name = "console-backend"
version = "0.1.0"
description = "A Python wrapper for the Rust console backend"
edition = "2018"

[dependencies]
log = "0.4.20"
async_logger_log = "0.2.0"
async_logger = "0.3.3"
strum = "0.25"
strum_macros = "0.25"
lazy_static = "1.4.0"
capnp = "0.17.2"
csv = "1"
paste = "1"
glob = "0.3.1"
directories = "5"
crossbeam = "0.8"
rand = "0.8.5"
parking_lot = "0.12.1"
sbp-settings = "0.6.16"
rust-ini = "0.19.0"
regex = "1.9.3"
serde_json = "1"
serde_yaml = "0.9"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.1", features = ["derive"] }
indexmap = { version = "2.0.0", features = ["serde"] }
chrono = { version = "0.4.26", features = [
  "serde",
  "clock",
  "std",
], default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
sbp = { version = "4.17.0", features = ["json", "link", "swiftnav"] }
mimalloc = { version = "0.1", default-features = false }
serialport = { git = "https://github.com/swift-nav/serialport-rs.git", default-features = false }

pyo3 = { version = "0.19.2", features = [
  "extension-module",
  "macros",
], default-features = false, optional = true }
env_logger = { version = "0.10.0", optional = true }
indicatif = { version = "0.17", optional = true }
serde-pickle = { version = "1.1.1", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
serialport = { git = "https://github.com/swift-nav/serialport-rs.git" }
curl = { version = "0.4", features = ["ssl", "static-curl"] }

[target.'cfg(target_os = "linux")'.dependencies]
curl = { version = "0.4", features = ["rustls", "static-curl"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.24", features = [
  "Win32_System_Console",
  "Win32_Foundation",
] }

[dev-dependencies]
logtest = "2.0.0"
serial_test = "2"
ndarray = "0.15.6"
criterion = "0.4.0"
sysinfo = "0.29.7"
tempfile = "3.7.1"
rstest = "0.18.1"

[build-dependencies]
capnpc = "0.17.1"

[lib]
name = "console_backend"
crate-type = ["cdylib", "lib"]
bench = false

[[bench]]
name = "cpu_benches"
harness = false

[[bin]]
name = "swift-settings"
path = "src/bin/settings.rs"
bench = false
required-features = ["env_logger"]

[[bin]]
name = "swift-files"
path = "src/bin/files.rs"
bench = false
required-features = ["env_logger", "indicatif"]

[[bin]]
name = "fft_monitor"
path = "src/bin/fft_monitor.rs"
bench = false
required-features = ["fft"]

[[bin]]
name = "headless-console"
path = "src/bin/headless-console.rs"
bench = false

[[bin]]
name = "swift-updater"
path = "src/bin/update_tool.rs"
bench = false

[features]
default = ["pyo3"]
benches = []
tests = []
fft = ["serde-pickle"]
