[package]
authors = ["Swift Navigation <dev@swift-nav.com>"]
description = "Starts the console with the correct python installation"
edition = "2018"
name = "swift-console"
version = "0.1.0"

[lib]
name = "entrypoint"
bench = false

[[bin]]
bench = false
name = "swift-console"
path = "src/main.rs"
required-features = ["entrypoint"]

[[bin]]
bench = false
name = "swift-console-splash"
path = "src/splash.rs"
required-features = ["splash"]

[dependencies.lazy_static]
optional = true
version = "1.4.0"

[dependencies.winit]
optional = true
version = "0.26.1"

[dependencies.image]
optional = true
version = "0.24.2"

[dependencies.minifb]
optional = true
version = "0.23"

[dependencies.pyo3]
default-features = false
features = ["auto-initialize"]
optional = true
version = "0.16"

[dependencies.windows]
features = ["Win32_System_Console", "Win32_Foundation"]
version = ">=0.24"

[features]
entrypoint = ["pyo3"]
splash = ["minifb", "image", "winit", "lazy_static"]

[target]
[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".build-dependencies]
[target."cfg(target_os = \"windows\")".build-dependencies.winres]
version = "0.1"
