[package]
authors = ["Swift Navigation <dev@swift-nav.com>"]
description = "Starts the console with the correct python installation"
edition = "2018"
name = "swift-console"
version = "0.1.0"

[[bin]]
bench = false
name = "swift-console"
path = "src/main.rs"

[dependencies.pyo3]
default-features = false
features = ["auto-initialize"]
version = "0.16"

[target]
[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".build-dependencies]
[target."cfg(target_os = \"windows\")".build-dependencies.winres]
version = "0.1"

[target."cfg(target_os = \"windows\")".dependencies]
[target."cfg(target_os = \"windows\")".dependencies.windows]
features = ["Win32_System_Console", "Win32_Foundation"]
version = ">=0.24"
