[package]
authors = ["Swift Navigation <dev@swift-nav.com>"]
description = "Starts the console with the correct python installation"
edition = "2018"
name = "swift-console"
version = "0.1.0"

[lib]
name = "entrypoint"
bench = false

[[bin]]
bench = false
name = "swift-console"
path = "src/main.rs"
required-features = ["entrypoint"]

[[bin]]
bench = false
name = "windowpos"
path = "src/windowpos.rs"
required-features = ["winit"]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.image]
version = "0.24.3"

[dependencies.winit]
version = "0.26.1"
optional = true

[dependencies.minifb]
default-features = false
features = ["x11"]
version = "0.23"
optional = true

[dependencies.pyo3]
default-features = false
features = ["auto-initialize"]
version = "0.16"
optional = true

[target]
[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".build-dependencies]
[target."cfg(target_os = \"windows\")".build-dependencies.winres]
version = "0.1"

[target."cfg(target_os = \"windows\")".dependencies]
[target."cfg(target_os = \"windows\")".dependencies.windows]
features = ["Win32_System_Console", "Win32_Foundation"]
version = ">=0.24"
optional = true

[features]
default = []
entrypoint = ["pyo3", "windows", "minifb"]
splash = []
